--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "dependencies": {
     "ejs": "^2.3.4",
     "express": "^4.13.3",
-    "leaflet-markercluster": "^0.2.0"
+    "leaflet-markercluster": "^0.2.0",
+    "please-ajax": "^2.0.2"
   }
 }
