--- a/package.json
+++ b/package.json
@@ -4,18 +4,19 @@
   "description": "",
   "main": "app.js",
   "scripts": {
-    "build": "browserify views/js/main.js > views/js/bundle.js -t [ babelify --presets [ es2015] ] && node app"
+    "build": "browserify views/js/main.js > views/js/bundle.js -t [ babelify --presets [ es2015] ]"
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
     "babel-preset-es2015": "^6.3.13",
     "babelify": "^7.2.0",
-    "browserify": "^13.0.0",
+    "browserify": "^13.0.0"
   },
   "dependencies": {
     "ejs": "^2.3.4",
     "express": "^4.13.3",
+    "leaflet-geocsv": "^0.5.0",
     "leaflet-markercluster": "^0.2.0",
     "please-ajax": "^2.0.2"
   }
